--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,14 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+
 uuid = { version = "1.0", features = ["serde", "v4"]}
 tower-http = { version = "0.3.0", features = [ "trace"] }
+
+diesel = { version = "2.0.0", features = ["postgres","extras"] } # extras{MUST HAVE} for chrono::DateTime<Local>/uuid
+dotenvy = "0.15"
+
+chrono = {version = "0.4.19"}
+
+async-session = "3.0.0"
