--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum={git = "https://www.github.com/tokio-rs/axum" ,tag = "axum-v0.6.0-rc.1"}
+axum={git = "https://www.github.com/tokio-rs/axum" ,tag = "axum-v0.6.0-rc.2"}
 tokio = { version = "1.0", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
@@ -22,4 +22,9 @@ dotenvy = "0.15"
 
 chrono = {version = "0.4.19"}
 
-async-session = "3.0.0"
+
+axum_database_sessions = {git = "https://github.com/AscendingCreations/AxumSessions",branch = "axum0.6"}
+axum_sessions_auth={git = "https://github.com/AscendingCreations/AxumSessionsAuth",branch = "5.0"}
+async-trait = "0.1.57"
+anyhow = "1.0.58"
+# thiserror = "1.0.32"
