--- a/meli/Cargo.toml
+++ b/meli/Cargo.toml
@@ -17,7 +17,7 @@ serde_json = "1.0"
 uuid = { version = "1.0", features = ["serde", "v4"]}
 tower-http = { version = "0.3.0", features = [ "trace","cors"] }
 
-diesel = { version = "2.0.0", features = ["postgres","extras"] } # extras{MUST HAVE} for chrono::DateTime<Local>/uuid
+diesel = { version = "2.0.0", features = ["postgres","extras","r2d2"] } # extras{MUST HAVE} for chrono::DateTime<Local>/uuid
 dotenvy = "0.15"
 
 chrono = {version = "0.4.19"}
