--- a/meli/Cargo.toml
+++ b/meli/Cargo.toml
@@ -34,3 +34,5 @@ rust-argon2 = "1.0"
 cookie = { version = "0.16.0" }
 bigdecimal={version = "0.3",features = ["serde"]}
 random_color="0.6"
+
+# ripgrep="13.0.0"
