--- a/meli/Cargo.toml
+++ b/meli/Cargo.toml
@@ -35,4 +35,5 @@ cookie = { version = "0.16.0" }
 bigdecimal={version = "0.3",features = ["serde"]}
 random_color="0.6"
 
-# ripgrep="13.0.0"
+regex = "1.6.0"
+email_address = "0.2.3"
