--- a/meli/.env
+++ b/meli/.env
@@ -1,3 +1,3 @@
 DATABASE_URL=postgres://postgres:postgres@localhost/meli
 DATABASE_ENCRYPTION_SAULT=123456 # &2VkLn#FUpvmENhf5&Cjq7$P$d^eLr2
-
+RUST_LOG="meli_backend=trace,axum_session_authentication_middleware=trace,axum_session_middleware=trace"
