make front end addr configurable

--- a/meli/.env
+++ b/meli/.env
@@ -1,3 +1,4 @@
 DATABASE_URL=postgres://postgres:postgres@localhost/meli
 DATABASE_ENCRYPTION_SAULT=randomsalt
 RUST_LOG="meli_backend=trace,axum_session_authentication_middleware=trace,axum_session_middleware=trace"
+FRONTEND_ADDR=http://127.0.0.1:8080
