--- a/meli/.env
+++ b/meli/.env
@@ -1,4 +1,7 @@
 DATABASE_URL=postgres://postgres:postgres@localhost/meli
 DATABASE_ENCRYPTION_SAULT=randomsalt
 RUST_LOG="meli_backend=trace,axum_session_authentication_middleware=trace,axum_session_middleware=trace"
-FRONTEND_ADDR=http://108.61.207.107:80
+
+HOST_IP=127.0.0.1 # 127.0.0.1 / 108.61.207.107
+FRONTEND_PORT=8080 # 为80端口时，配置跨域时不需要写上端口。非80端口，跨域设置需要写上端口。
+BACKEND_PORT=3000 
