--- a/meli/.env
+++ b/meli/.env
@@ -2,6 +2,12 @@ DATABASE_URL=postgres://postgres:postgres@localhost/meli
 DATABASE_ENCRYPTION_SAULT=randomsalt
 RUST_LOG="meli_backend=trace,axum_session_authentication_middleware=trace,axum_session_middleware=trace"
 
-HOST_IP=127.0.0.1 # 127.0.0.1 / 108.61.207.107
-FRONTEND_PORT=8080 # 为80端口时，配置跨域时不需要写上端口。非80端口，跨域设置需要写上端口。
-BACKEND_PORT=3000 
+# $MELI_ENV not equal PROD
+DEV_HOST_IP=127.0.0.1
+DEV_FRONTEND_PORT=8080 # 为80端口时，配置跨域时不需要写上端口。非80端口，跨域设置需要写上端口。
+DEV_BACKEND_PORT=3000 
+
+# $MELI_ENV=PROD has been set
+PROD_HOST_IP=108.61.207.107
+PROD_FRONTEND_PORT=80 # 为80端口时，配置跨域时不需要写上端口。非80端口，跨域设置需要写上端口。
+PROD_BACKEND_PORT=3000 
