--- a/meli/.env
+++ b/meli/.env
@@ -2,7 +2,7 @@ DATABASE_URL=postgres://postgres:postgres@localhost/meli
 DATABASE_ENCRYPTION_SAULT=randomsalt
 RUST_LOG="meli_backend=trace,axum_session_authentication_middleware=trace,axum_session_middleware=trace"
 
-# $MELI_ENV not equal PROD
+# $MELI_ENV not equals to `PROD`
 DEV_HOST_IP=127.0.0.1
 DEV_FRONTEND_PORT=8080 # 为80端口时，配置跨域时不需要写上端口。非80端口，跨域设置需要写上端口。
 DEV_BACKEND_PORT=3000 
