--- a/meli/.env
+++ b/meli/.env
@@ -4,10 +4,10 @@ RUST_LOG="meli_backend=trace,axum_session_authentication_middleware=trace,axum_s
 
 # $MELI_ENV not equals to `PROD`
 DEV_HOST_IP=127.0.0.1
-DEV_FRONTEND_PORT=8080 # 为80端口时，配置跨域时不需要写上端口。非80端口，跨域设置需要写上端口。
+DEV_FRONTEND_PORT=5000 # 为80端口时，配置跨域时不需要写上端口。非80端口，跨域设置需要写上端口。
 DEV_BACKEND_PORT=3000 
 
 # $MELI_ENV=PROD has been set
-PROD_HOST_IP=108.61.207.107
-PROD_FRONTEND_PORT=80 # 为80端口时，配置跨域时不需要写上端口。非80端口，跨域设置需要写上端口。
-PROD_BACKEND_PORT=3000 
+PROD_HOST_IP=ahab.me
+PROD_FRONTEND_PORT=443 # 为80端口时，配置跨域时不需要写上端口。非80端口，跨域设置需要写上端口。
+PROD_BACKEND_PORT=3000
