--- a/meli/.env
+++ b/meli/.env
@@ -3,11 +3,7 @@ DATABASE_ENCRYPTION_SAULT=randomsalt
 RUST_LOG="meli_backend=trace,axum_session_authentication_middleware=trace,axum_session_middleware=trace"
 
 # $MELI_ENV not equals to `PROD`
-DEV_HOST_IP=127.0.0.1
-DEV_FRONTEND_PORT=5000 # 为80端口时，配置跨域时不需要写上端口。非80端口，跨域设置需要写上端口。
-DEV_BACKEND_PORT=3000 
+DEV_CROSS_ORIGIN=http://127.0.0.1:8080
 
 # $MELI_ENV=PROD has been set
-PROD_HOST_IP=127.0.0.1 # ahab.me
-PROD_FRONTEND_PORT=443 # 为80端口时，配置跨域时不需要写上端口。非80端口，跨域设置需要写上端口。
-PROD_BACKEND_PORT=3000
+PROD_CROSS_ORIGIN=https://ahab.me
